samples/_failures_safe/1761304163_b3ee7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c93461ed.c: In function ‘main’:
./samples/SAFE/__tmp_c93461ed.c:152:21: error: expected declaration or statement at end of input
  152 |                     print_matrix(&result, "A + B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_c93461ed.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c93461ed.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c93461ed.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c93461ed.c:152:21: error: expected declaration or statement at end of input
